--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Anime Explorer</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,9 +12,10 @@
     />
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
-  <body style="background-color: #1D1720;">
-    <div class="d-flex box2">
-      <div class="box2 justify-content-start me-3">
+  <body style="background-color: #1d1720">
+
+    <div class="box2">
+      <div class="box2 justify-content-start me-3 mb-4">
         <%if (locals.imageURL) {%>
         <img
           src=<%= imageURL %>
@@ -30,7 +31,7 @@
         <h1 class="mb-4"><%= name %></h1>
         <h2 class="mx-3">Overview:</h2>
         <% if (!locals.synopsis) {%>
-        <p>
+        <p class="mb-3">
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque a,
           quos rem perferendis sit sequi assumenda modi repellendus earum neque
           nisi est porro quis? Dolores eaque repudiandae iste asperiores
@@ -41,28 +42,27 @@
         <% } %>
       </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6 col-sm-12">
-                <h2>Details: </h2>
-                <ul class="px-5 pt-2">
-                    <li>Number of episodes: <%= episodes %> </li>
-                    <li>Duration:  <%= duration %> </li>
-                    <li>Status: <%= status %> </li>
-                    <li>Aired: <%= year %> </li>
-                    <li>Type: <%= type %> </li>
-                </ul>
-            </div>
-            <div class="col-lg-6 col-sm-12">
-                <h2>Rating: </h2>
-                <ul class="px-5 pt-2">
-                    <li>Score: <%= score %></li>
-                    <li>Scored by: <%= scored_by %></li>
-                </ul>
-                <h3>For mroe deatils !</h3>
-                <p class="visit">Visit: <a href=<%= url %>><%= name %></a></p>
-            </div>
-        </div>
+
+    <div class="lower-half word-wrap">
+      <div id="details">
+        <h2>Details:</h2>
+        <ul class="px-5 pt-2">
+          <li>Number of episodes: <%= episodes %></li>
+          <li>Duration: <%= duration %></li>
+          <li>Status: <%= status %></li>
+          <li>Aired: <%= year %></li>
+          <li>Type: <%= type %></li>
+        </ul>
+      </div>
+      <div id="rating">
+        <h2>Rating:</h2>
+        <ul class="px-5 pt-2">
+          <li>Score: <%= score %></li>
+          <li>Scored by: <%= scored_by %></li>
+        </ul>
+        <h3>For mroe deatils !</h3>
+        <p class="visit">Visit: <a href=<%= url%></a><%= name %></a></p>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
